--- a/main/templates/main/log.html
+++ b/main/templates/main/log.html
@@ -3,6 +3,7 @@
 {% block content %}
 <h3>
   {% if user.is_authenticated %}
+  {{ user.division }}
   {{ user.get_full_name }} さんの記録
   {% endif %}
 </h3>
