--- a/main/templates/main/log.html
+++ b/main/templates/main/log.html
@@ -18,59 +18,7 @@
 
 <div class="row my-4">
   {% if is_paginated %}
-  {% load paginator_tags %}
-  <nav aria-label="Page navigation">
-    <ul class="pagination">
-      {% with obj=page_obj paginator=page_obj.paginator %}
-      {% if obj.has_previous %}
-      <li class="page-item">
-	<a class="page-link" href="{% url 'main:log' 1 %}">
-	  最初&lt;&lt; </a></li>
-      <li class="page-item">
-	<a class="page-link"
-	   href="{% url 'main:log' obj.previous_page_number %}">
-	  戻る&lt;</a></li>
-      {% else %}
-      <li class="page-item disabled">
-	<span class="page-link">
-	  最初&lt;&lt; </span></li>
-      <li class="page-item disabled">
-	<span class="page-link">
-	  戻る&lt;</span></li>
-      {% endif %}
-
-      {% get_proper_elided_page_range obj 2 2 as page_range %}
-      {% for i in page_range %}
-      {% if obj.number == i %}
-      <li class="page-item active">
-	<span class="page-link">{{ i }}</span></li>
-      {% elif paginator.ELLIPSIS == i %}
-      <li class="page-item">
-	<span class="page-link">{{ i }}</span></li>
-      {% else %}
-      <li class="page-item">
-	<a class="page-link" href="{% url 'main:log' i %}">{{ i }}</a></li>
-      {% endif %}
-      {% endfor %}
-
-      {% if obj.has_next %}
-      <li class="page-item">
-	<a class="page-link" href="{% url 'main:log' obj.next_page_number %}">
-	  &gt;次へ</a></li>
-      <li class="page-item">
-	<a class="page-link" href="{% url 'main:log' paginator.num_pages %}">
-	  &gt;&gt;最後</a></li>
-      {% else %}
-      <li class="page-item disabled">
-	<span class="page-link">
-	  &gt;次へ</span></li>
-      <li class="page-item disabled">
-	<span class="page-link">
-	  &gt;&gt;最後</span></li>
-      {% endif %}
-      {% endwith %}
-    </ul>
-  </nav>
+  {% include "main/nav_paginator.html" with nav_url_name="main:log" %}
   <div class="w-100"></div>
   {% endif %}
 
