--- a/main/templates/main/log.html
+++ b/main/templates/main/log.html
@@ -18,7 +18,7 @@
 
 <div class="row my-4">
   {% if is_paginated %}
-  {% include "main/nav_paginator.html" with nav_url_name="main:log" %}
+  {% include "nav_paginator.html" with nav_url_name="main:log" %}
   <div class="w-100"></div>
   {% endif %}
 
