--- a/main/templates/main/nav_paginator.html
+++ b/main/templates/main/nav_paginator.html
@@ -1,5 +1,3 @@
-{% load paginator_tags %}
-
 <nav aria-label="Page navigation">
   <ul class="pagination">
     {% with obj=page_obj paginator=page_obj.paginator %}
@@ -19,8 +17,7 @@
       <span class="page-link">戻る&lt;</span></li>
     {% endif %}
 
-    {% get_proper_elided_page_range obj 2 2 as page_range %}
-    {% for i in page_range %}
+    {% for i in page_nav_list %}
     {% if obj.number == i %}
     <li class="page-item active">
       <span class="page-link">{{ i }}</span></li>
